// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Home page can delete typed text with backspace 1`] = `
<DocumentFragment>
  .emotion-22 {
  height: 100vh;
  min-width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-19 {
  max-width: 50%;
  min-width: 640px;
}

.emotion-0 {
  --text-opacity: 1;
  font-size: 2.25rem;
  color: #1c64f2;
  color: rgba(28,100,242,var(--text-opacity));
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.emotion-15 {
  font-size: 1.25rem;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.emotion-14 {
  margin-top: 0.25rem;
  margin-bottom: 0.25rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  width: 100%;
}

.emotion-5 {
  position: relative;
  margin-right: 0.25rem;
}

.emotion-18 {
  height: 0;
  width: 0;
}

.emotion-21 {
  position: fixed;
  bottom: 0;
  padding-bottom: 2rem;
  text-align: center;
}

.emotion-20 {
  font-size: 0.75rem;
}

.emotion-3 {
  --text-opacity: 1;
  color: #d2d6dc;
  color: rgba(210,214,220,var(--text-opacity));
}

.emotion-4 {
  --bg-opacity: 1;
  position: absolute;
  height: 1.5rem;
  background-color: #3f83f8;
  background-color: rgba(63,131,248,var(--bg-opacity));
  -webkit-transition: all 0.1s ease-out;
  transition: all 0.1s ease-out;
  width: 2px;
  left: 1px;
  top: 4px;
}

.emotion-6 {
  margin-right: 0.25rem;
}

.emotion-1 {
  --text-opacity: 1;
  color: #057a55;
  color: rgba(5,122,85,var(--text-opacity));
}

.emotion-16 {
  font-size: 1rem;
}

<div
    class="emotion-22"
  >
    <main
      class="emotion-19"
    >
      <h1
        class="emotion-0"
      >
        Typeland
      </h1>
      <div
        class="emotion-15"
        data-testid="text"
      >
        <div
          class="emotion-14"
        >
          <span
            class="emotion-5"
            data-testid="word"
          >
            <span
              class="correct emotion-1"
              data-testid="correct"
            >
              t
            </span>
            <span
              class="correct emotion-1"
              data-testid="correct"
            >
              h
            </span>
            <span
              class="pending emotion-3"
              data-testid="pending"
            >
              e
            </span>
            <span
              class="emotion-4"
              data-testid="caret"
            />
          </span>
          <span
            class="emotion-6"
            data-testid="remainingWord"
          >
            quick
          </span>
          <span
            class="emotion-6"
            data-testid="remainingWord"
          >
            brown
          </span>
          <span
            class="emotion-6"
            data-testid="remainingWord"
          >
            fox
          </span>
          <span
            class="emotion-6"
            data-testid="remainingWord"
          >
            jumps
          </span>
          <span
            class="emotion-6"
            data-testid="remainingWord"
          >
            over
          </span>
          <span
            class="emotion-6"
            data-testid="remainingWord"
          >
            the
          </span>
          <span
            class="emotion-6"
            data-testid="remainingWord"
          >
            lazy
          </span>
          <span
            class="emotion-6"
            data-testid="remainingWord"
          >
            dog
          </span>
        </div>
      </div>
      <div
        class="emotion-16"
      >
        0 wpm
      </div>
      <div
        class="emotion-16"
      >
        Stats (correct/wrong/total) : 0/0/0
      </div>
      <input
        class="emotion-18"
        data-testid="typingInput"
        id="typingInput"
        tabindex="0"
        type="text"
      />
    </main>
    <div
      class="emotion-21"
    >
      <a
        class="emotion-20"
        href="https://github.com/narze/typeland"
        rel="noreferrer"
        target="_blank"
      >
        GitHub
      </a>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Home page highlights text which is typed 1`] = `
<DocumentFragment>
  .emotion-22 {
  height: 100vh;
  min-width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-19 {
  max-width: 50%;
  min-width: 640px;
}

.emotion-0 {
  --text-opacity: 1;
  font-size: 2.25rem;
  color: #1c64f2;
  color: rgba(28,100,242,var(--text-opacity));
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.emotion-15 {
  font-size: 1.25rem;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.emotion-14 {
  margin-top: 0.25rem;
  margin-bottom: 0.25rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  width: 100%;
}

.emotion-5 {
  position: relative;
  margin-right: 0.25rem;
}

.emotion-18 {
  height: 0;
  width: 0;
}

.emotion-21 {
  position: fixed;
  bottom: 0;
  padding-bottom: 2rem;
  text-align: center;
}

.emotion-20 {
  font-size: 0.75rem;
}

.emotion-4 {
  --bg-opacity: 1;
  position: absolute;
  height: 1.5rem;
  background-color: #3f83f8;
  background-color: rgba(63,131,248,var(--bg-opacity));
  -webkit-transition: all 0.1s ease-out;
  transition: all 0.1s ease-out;
  width: 2px;
  left: 1px;
  top: 4px;
}

.emotion-6 {
  margin-right: 0.25rem;
}

.emotion-1 {
  --text-opacity: 1;
  color: #057a55;
  color: rgba(5,122,85,var(--text-opacity));
}

.emotion-16 {
  font-size: 1rem;
}

.emotion-3 {
  --text-opacity: 1;
  color: #f98080;
  color: rgba(249,128,128,var(--text-opacity));
}

<div
    class="emotion-22"
  >
    <main
      class="emotion-19"
    >
      <h1
        class="emotion-0"
      >
        Typeland
      </h1>
      <div
        class="emotion-15"
        data-testid="text"
      >
        <div
          class="emotion-14"
        >
          <span
            class="emotion-5"
            data-testid="word"
          >
            <span
              class="correct emotion-1"
              data-testid="correct"
            >
              t
            </span>
            <span
              class="correct emotion-1"
              data-testid="correct"
            >
              h
            </span>
            <span
              class="wrong emotion-3"
              data-testid="wrong"
            >
              e
            </span>
            <span
              class="emotion-4"
              data-testid="caret"
            />
          </span>
          <span
            class="emotion-6"
            data-testid="remainingWord"
          >
            quick
          </span>
          <span
            class="emotion-6"
            data-testid="remainingWord"
          >
            brown
          </span>
          <span
            class="emotion-6"
            data-testid="remainingWord"
          >
            fox
          </span>
          <span
            class="emotion-6"
            data-testid="remainingWord"
          >
            jumps
          </span>
          <span
            class="emotion-6"
            data-testid="remainingWord"
          >
            over
          </span>
          <span
            class="emotion-6"
            data-testid="remainingWord"
          >
            the
          </span>
          <span
            class="emotion-6"
            data-testid="remainingWord"
          >
            lazy
          </span>
          <span
            class="emotion-6"
            data-testid="remainingWord"
          >
            dog
          </span>
        </div>
      </div>
      <div
        class="emotion-16"
      >
        0 wpm
      </div>
      <div
        class="emotion-16"
      >
        Stats (correct/wrong/total) : 0/0/0
      </div>
      <input
        class="emotion-18"
        data-testid="typingInput"
        id="typingInput"
        tabindex="0"
        type="text"
      />
    </main>
    <div
      class="emotion-21"
    >
      <a
        class="emotion-20"
        href="https://github.com/narze/typeland"
        rel="noreferrer"
        target="_blank"
      >
        GitHub
      </a>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Home page renders title 1`] = `
<DocumentFragment>
  .emotion-20 {
  height: 100vh;
  min-width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-17 {
  max-width: 50%;
  min-width: 640px;
}

.emotion-0 {
  --text-opacity: 1;
  font-size: 2.25rem;
  color: #1c64f2;
  color: rgba(28,100,242,var(--text-opacity));
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.emotion-15 {
  font-size: 1.25rem;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.emotion-14 {
  margin-top: 0.25rem;
  margin-bottom: 0.25rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  width: 100%;
}

.emotion-5 {
  position: relative;
  margin-right: 0.25rem;
}

.emotion-16 {
  height: 0;
  width: 0;
}

.emotion-19 {
  position: fixed;
  bottom: 0;
  padding-bottom: 2rem;
  text-align: center;
}

.emotion-18 {
  font-size: 0.75rem;
}

.emotion-1 {
  --text-opacity: 1;
  color: #d2d6dc;
  color: rgba(210,214,220,var(--text-opacity));
}

.emotion-4 {
  --bg-opacity: 1;
  position: absolute;
  height: 1.5rem;
  background-color: #3f83f8;
  background-color: rgba(63,131,248,var(--bg-opacity));
  -webkit-transition: all 0.1s ease-out;
  transition: all 0.1s ease-out;
  width: 2px;
  left: 1px;
  top: 4px;
}

.emotion-6 {
  margin-right: 0.25rem;
}

<div
    class="emotion-20"
  >
    <main
      class="emotion-17"
    >
      <h1
        class="emotion-0"
      >
        Typeland
      </h1>
      <div
        class="emotion-15"
        data-testid="text"
      >
        <div
          class="emotion-14"
        >
          <span
            class="emotion-5"
            data-testid="word"
          >
            <span
              class="pending emotion-1"
              data-testid="pending"
            >
              t
            </span>
            <span
              class="pending emotion-1"
              data-testid="pending"
            >
              h
            </span>
            <span
              class="pending emotion-1"
              data-testid="pending"
            >
              e
            </span>
            <span
              class="emotion-4"
              data-testid="caret"
            />
          </span>
          <span
            class="emotion-6"
            data-testid="remainingWord"
          >
            quick
          </span>
          <span
            class="emotion-6"
            data-testid="remainingWord"
          >
            brown
          </span>
          <span
            class="emotion-6"
            data-testid="remainingWord"
          >
            fox
          </span>
          <span
            class="emotion-6"
            data-testid="remainingWord"
          >
            jumps
          </span>
          <span
            class="emotion-6"
            data-testid="remainingWord"
          >
            over
          </span>
          <span
            class="emotion-6"
            data-testid="remainingWord"
          >
            the
          </span>
          <span
            class="emotion-6"
            data-testid="remainingWord"
          >
            lazy
          </span>
          <span
            class="emotion-6"
            data-testid="remainingWord"
          >
            dog
          </span>
        </div>
      </div>
      <input
        class="emotion-16"
        data-testid="typingInput"
        id="typingInput"
        tabindex="0"
        type="text"
      />
    </main>
    <div
      class="emotion-19"
    >
      <a
        class="emotion-18"
        href="https://github.com/narze/typeland"
        rel="noreferrer"
        target="_blank"
      >
        GitHub
      </a>
    </div>
  </div>
</DocumentFragment>
`;
